Testando alteração de codigo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div id="profile">
         <img src="./assets/ntpaul0.png" alt="Foto de Paulo Neto" />
         <p>@ntpaulo</p>
+        <p>@ntnexus</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
